--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
     </div>
 </div>
 </body>
-<script type="module" src="scripts/main.js"></script>
+<script src="scripts/main.js"></script>
 </html>
